--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <div class="flex_container">
         <div class="header-icons">
-            <a href="https://www.github.com/anthonybronkema" target="blank" id="code">
-                <i class="fas fa-code-branch icon"></i>
+            <a href="https://www.github.com/anthonybronkema" target="blank">
+                <i class="fas fa-code-branch icon" id="code"></i>
             </a>
-            <a href="#" id="mail">
-                <i class="far fa-paper-plane icon"></i>
+            <a href="#" target="">
+                <i class="far fa-paper-plane icon" id="mail"></i>
             </a>
-            <a href="https://www.twitter.com/anthonybronkema" target="blank" id="twitter">
-                <i class="fab fa-twitter icon"></i>
+            <a href="https://www.twitter.com/anthonybronkema" target="blank">
+                <i class="fab fa-twitter icon" id="twitter"></i>
             </a>
         </div>
         <div class="header">
