feat: add click event to mail

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="header">
             <p class="header-name__primary">anthony a bronkema</p>
             <p class="header-name__alt"></p>
+            <form name="feedback" method="post" data-netlify="true">
+               <input type="text" name="feedback" id="feedbackInput" class="hide"></label>
+            </form>
         </div>
         <div class="tag">
             <p>I'm always learning</p>
