updated twitter link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="flex_container">
         <div class="header-icons">
-            <a href="https://www.github.com/anthonybronkema" target="blank">
+            <a href="https://www.github.com/oh_hey_anthony" target="blank">
                 <i class="fas fa-code-branch icon" id="code"></i>
             </a>
             <a href="#" target="">
