--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <div class="flex_container">
         <div class="header-icons">
-            <a href="https://www.github.com/oh_hey_anthony" target="blank">
+            <a href="https://www.github.com/abronkema" target="blank">
                 <i class="fas fa-code-branch icon" id="code"></i>
             </a>
             <a href="#" target="">
                 <i class="far fa-paper-plane icon" id="mail"></i>
             </a>
-            <a href="https://www.twitter.com/anthonybronkema" target="blank">
+            <a href="https://www.twitter.com/oh_hey_anthony" target="blank">
                 <i class="fab fa-twitter icon" id="twitter"></i>
             </a>
         </div>
