--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </form>
         </div>
         <div class="tag">
-            <p>I'm always learning</p>
-            <p>Feedback, tips & advice are always welcome</p>
+            <p>I'm a project manager at Custom Ink</p>
+            <p>I have plans for this site, now if I just found time...</p>
         </div>
     </div>
     <script src="/app.js"></script>
