adds email-clipboard and updates some hover text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#" target="">
                 <i class="far fa-paper-plane icon" id="mail"></i>
             </a>
-            <a href="https://www.twitter.com/oh_hey_anthony" target="blank">
+            <a href="https://www.twitter.com/anthonybronkema" target="blank">
                 <i class="fab fa-twitter icon" id="twitter"></i>
             </a>
         </div>
