updated tag text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <title>anthony a bronkema</title>
+    <title>anthony bronkema</title>
 </head>
 <body>
     <div class="flex_container">
@@ -23,15 +23,16 @@
             </a>
         </div>
         <div class="header">
-            <p class="header-name__primary">anthony a bronkema</p>
+            <p class="header-name__primary">anthony bronkema</p>
             <p class="header-name__alt"></p>
             <form name="feedback" method="post" data-netlify="true">
                <input type="text" name="feedback" id="feedbackInput" class="hide"></label>
             </form>
         </div>
         <div class="tag">
-            <p>I'm a project manager at Custom Ink</p>
-            <p>I have plans for this site, now if I just found time...</p>
+            <p>I'm a technical project manager at Custom Ink</p>
+            <p>My focus areas are supply chain and production development efforts</p>
+            <p>There will eventually be more here, but reach out if you'd like.</p>
         </div>
     </div>
     <script src="/app.js"></script>
