changes text classes, adds smaller text

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                <input type="text" name="feedback" id="feedbackInput" class="hide"></label>
             </form>
         </div>
-        <div class="tag">
+        <div class="narrative">
             <p>I'm a technical project manager at Custom Ink</p>
             <p>My focus areas are supply chain and production development efforts</p>
-            <p>There will eventually be more here, but reach out if you'd like.</p>
+            <p class="narrative_small">(There will eventually be more here, but reach out in the meantime)</p>
         </div>
     </div>
     <script src="/app.js"></script>
